Added --enable-preview flag